--- a/css/mine.css
+++ b/css/mine.css
@@ -1,3 +1,11 @@
+/*Header Elements Style*/
+
+.my-account {
+    padding-left: 50px;
+}
+
+
+
 .black1 {
     color: #111;
 }
@@ -66,6 +74,9 @@
     background-color: #111;
     color: rgb(221, 213, 213) !important;
 }
+
+
+
 
 
 /* Elements */
