--- a/css/pop-up.css
+++ b/css/pop-up.css
@@ -1,8 +1,8 @@
 #magnify_area {
     overflow: hidden;
     position: relative;
-    width: 83vw;
-    height: 500px;
+    width: 100%;
+    height: 100%;
 }
 
 #magnify_image {
