--- a/css/styles.css
+++ b/css/styles.css
@@ -1940,11 +1940,13 @@ pre code {
     font-size: 1rem;
     font-weight: 400;
     line-height: 1.5;
-    color: #495057;
-    background-color: #fff;
+    color: #ccc;
+    background: none;
     background-clip: padding-box;
-    border: 1px solid #ced4da;
-    border-radius: 0.25rem;
+    border:none;
+    border-bottom: 1px solid #555;
+    border-radius: none;
+
     transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
 }
 
@@ -1965,11 +1967,10 @@ pre code {
 }
 
 .form-control:focus {
-    color: #495057;
-    background-color: #fff;
-    border-color: #ffeeb5;
+    color: #fff;
+    background: none;
     outline: 0;
-    box-shadow: 0 0 0 0.2rem rgba(254, 209, 54, 0.25);
+    border-bottom:2px solid #008000;
 }
 
 .form-control::-moz-placeholder {
@@ -9962,9 +9963,11 @@ a.text-light:focus {
     color: #343a40 !important;
 }
 
+
+
 a.text-dark:hover,
 a.text-dark:focus {
-    color: #121416 !important;
+    color: #008000 !important;
 }
 
 .text-body {
