--- a/css/mine.css
+++ b/css/mine.css
@@ -40,18 +40,18 @@
     border-radius: 20px;
 }
 
-.boxshadow:hover {
+.boxshadow:hover, .boxshadow2:hover {
     -ms-transform: scale(1.01);
     -webkit-transform: scale(1.01);
     transform: scale(1.01);
     border: 1px solid rgba(0,128,0,0.5) !important;
-    border-radius: 20px;
 }
 
 .boxshadow2 {
-    box-shadow: 0 2px 4px 0 rgba(20, 20, 20, 0.541), 0 3px 12px 0 rgba(0, 0, 0, 0.644) !important;
+    box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.7) !important;
     transition: transform 0.3s;
 }
+
 
 .footer-bg {
     background-color: #101010;
@@ -92,4 +92,11 @@
     font-size:1rem !important;
 }
 
-/* Elements */
+.signal-time {
+    font-weight: 500;
+    font-size:0.9em !important;
+
+}
+
+/* Responsive Elements */
+
