--- a/css/mine.css
+++ b/css/mine.css
@@ -4,8 +4,6 @@
     padding-left: 50px;
 }
 
-
-
 .black1 {
     color: #111;
 }
@@ -40,11 +38,12 @@
     border-radius: 20px;
 }
 
-.boxshadow:hover, .boxshadow2:hover {
+.boxshadow:hover,
+.boxshadow2:hover {
     -ms-transform: scale(1.01);
     -webkit-transform: scale(1.01);
     transform: scale(1.01);
-    border: 1px solid rgba(0,128,0,0.5) !important;
+    border: 1px solid rgba(0, 128, 0, 0.5) !important;
 }
 
 .boxshadow2 {
@@ -52,10 +51,10 @@
     transition: transform 0.3s;
 }
 
-
 .footer-bg {
     background-color: #101010;
 }
+
 .footer .text-white {
     color: #8c8c8c !important;
 }
@@ -81,22 +80,33 @@
     color: rgb(221, 213, 213) !important;
 }
 
-
-
 .testimonials p {
-    font-size:0.8rem;
+    font-size: 0.8rem;
 }
 
 .testimonial-content {
     text-transform: none !important;
-    font-size:1rem !important;
+    font-size: 1rem !important;
 }
 
 .signal-time {
     font-weight: 500;
-    font-size:0.9em !important;
-
+    font-size: 0.9em !important;
 }
 
-/* Responsive Elements */
+.border-radius {
+    border-radius: 20px !important;
+}
 
+.blurred {
+    color: transparent !important;
+    text-shadow: 0 0 5px rgba(46, 45, 45, 0.75) !important;
+}
+
+.blurred img {
+    filter: blur(2px);
+    opacity: 0.5;
+}
+
+
+/* Responsive Elements */
