--- a/css/pop-up.css
+++ b/css/pop-up.css
@@ -1,8 +1,8 @@
 #magnify_area {
     overflow: hidden;
     position: relative;
-    width: 100%;
-    height: 100%;
+    min-width: 1200px;
+    height: 600px;
 }
 
 #magnify_image {
